set01/problem10debug.txt
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets> cd set01
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> git add .
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> git commit -m "test"
[main 6a338a7] test
 1 file changed, 32 insertions(+)
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> git push
fatal: unable to access 'https://github.com/VarnikaReddy/C_activity_sets.git/': Could not resolve host: github.com
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> gcc problem10.c
problem10.c: In function 'output':
problem10.c:36:5: error: expected ';' before '}' token
     }
     ^
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> gdb a.exe
GNU gdb (GDB) 7.6.1
Copyright (C) 2013 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "mingw32".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01\a.exe...done.
(gdb) b main
Breakpoint 1 at 0x401463
(gdb) r 
Starting program: C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01/a.exe
[New Thread 2640.0x6a34]
[New Thread 2640.0x6cfc]

Breakpoint 1, 0x00401463 in main ()
(gdb) s
Single stepping until exit from function main,
which has no line number information.